--- a/src/main/yamcs/etc/yamcs.yaml
+++ b/src/main/yamcs/etc/yamcs.yaml
@@ -6,6 +6,9 @@ services:
       cors:
         allowOrigin: "*"
         allowCredentials: false
+  - class: org.yamcs.replication.ReplicationServer
+    args:
+      port: 8099
 # This is where Yamcs will persist its data. Paths are resolved relative to where Yamcs is running
 # from (by default: target/yamcs). This means that `mvn clean` will remove also persisted data.
 # Change this property to an absolute path in case you want to persist your data.
