--- a/src/main/yamcs/etc/yamcs.yaml
+++ b/src/main/yamcs/etc/yamcs.yaml
@@ -17,3 +17,7 @@ instances:
 # Secret key unique to a particular Yamcs installation.
 # This is used to provide cryptographic signing.
 secretKey: changeme
+
+yamcs-web:
+  staticRoot: "/yamcs-instance/front-end/webapp/dist"
+
