Revert "implement saving logs to different files"
This reverts commit 23c8e2a76538e1bc42fde99b92d026575716f738.

--- a/communication/logging.conf
+++ b/communication/logging.conf
@@ -1,60 +1,29 @@
 [loggers]
-keys = root, telemetry, obc, adcs
+keys = root
 
 [handlers]
-keys = console, telemetry_handler, obc_handler, adcs_handler
+keys = console,file
 
 [formatters]
 keys = consoleFormatter,fileFormatter
 
 [logger_root]
-handlers = console
-level = INFO
-
-[logger_telemetry]
-qualname = telemetry
-handlers = telemetry_handler
-level = INFO
-propagate = 0
-
-[logger_obc]
-qualname = obc
-handlers = obc_handler
-level = INFO
-propagate = 0
-
-[logger_adcs]
-qualname = adcs
-handlers = adcs_handler
-level = INFO
-propagate = 0
+handlers = console,file
+level = NOTSET
 
 [handler_console]
-class = StreamHandler
-level = INFO
-formatter = consoleFormatter
-args = (sys.stdout,)
+class = logging.StreamHandler
+level = NOTSET
+formatter=consoleFormatter
 
-[handler_telemetry_handler]
+[handler_file]
 class = FileHandler
 level = INFO
 formatter = fileFormatter
-args = ('telemetry.log', 'a', 'utf-8')
-
-[handler_obc_handler]
-class = FileHandler
-level = INFO
-formatter = fileFormatter
-args = ('obc.log', 'a', 'utf-8')
-
-[handler_adcs_handler]
-class = FileHandler
-level = INFO
-formatter = fileFormatter
-args = ('adcs.log', 'a', 'utf-8')
+args = ('telemetry.log', 'a')
 
 [formatter_consoleFormatter]
-format = %(levelname)s : %(message)s
+format =%(levelname)s :  %(message)s
 
 [formatter_fileFormatter]
-format = %(asctime)s %(levelname)s %(message)s
+format =%(asctime)s %(levelname)s : %(message)s
