--- a/pom.xml
+++ b/pom.xml
@@ -59,83 +59,6 @@
       </plugin>
 
       <plugin>
-        <groupId>com.github.eirslett</groupId>
-        <artifactId>frontend-maven-plugin</artifactId>
-        <version>1.9.1</version>
-        <configuration>
-          <nodeVersion>v18.14.0</nodeVersion>
-          <workingDirectory>src/main/frontend</workingDirectory>
-          <skip>${prodDockerBuild}</skip>
-        </configuration>
-        <executions>
-          <execution>
-          <phase>initialize</phase>
-            <id>install-npm</id>
-            <goals>
-              <goal>install-node-and-npm</goal>
-            </goals>
-          </execution>
-          <execution>
-          <phase>initialize</phase>
-            <id>npm install</id>
-            <goals>
-              <goal>npm</goal>
-            </goals>
-            <configuration>
-              <arguments>run-script build</arguments>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <artifactId>maven-resources-plugin</artifactId>
-        <version>3.2.0</version>
-        <configuration>
-          <skip>${prodDockerBuild}</skip>
-        </configuration>
-        <executions>
-          <execution>
-            <id>copy-resources</id>
-            <phase>generate-sources</phase>
-            <goals>
-              <goal>copy-resources</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>${basedir}/target/static</outputDirectory>
-              <resources>
-                <resource>
-                  <directory>${webdir}</directory>
-                  <filtering>true</filtering>
-                </resource>
-              </resources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>generate-manifest</id>
-            <phase>generate-sources</phase>
-            <goals>
-              <goal>run</goal>
-            </goals>
-            <configuration>
-              <target>
-                <fileset id="webfiles" dir="${basedir}/target/frontend/static" />
-                <property name="prop.webfiles" refid="webfiles" />
-                <echo file="${basedir}/target/frontend/static/manifest.txt">${prop.webfiles}</echo>
-              </target>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
         <groupId>org.yamcs</groupId>
         <artifactId>yamcs-maven-plugin</artifactId>
         <version>1.2.7</version>
@@ -169,7 +92,7 @@
     <profile>
       <activation>
         <file>
-          <missing>frontend</missing>
+          <missing>src/main/frontend</missing>
         </file>
       </activation>
       <build>
@@ -196,23 +119,89 @@
                 </arguments>
               </configuration>
             </execution>
-            <execution>
-              <id>npm install</id>
-              <goals>
-                <goal>exec</goal>
-              </goals>
-              <phase>validate</phase>
-              <configuration>
-                <executable>npm</executable>
-                <arguments>install</arguments>
-                <workingDirectory>src/main/frontend</workingDirectory>
-                <target>
-                  <echo message="Npm install" />
-                </target>
-              </configuration>
-            </execution>
           </executions>
           </plugin>
+        <plugin>
+        <groupId>com.github.eirslett</groupId>
+        <artifactId>frontend-maven-plugin</artifactId>
+        <version>1.9.1</version>
+        <configuration>
+          <nodeVersion>v18.14.0</nodeVersion>
+          <workingDirectory>src/main/frontend</workingDirectory>
+          <skip>${prodDockerBuild}</skip>
+        </configuration>
+        <executions>
+          <execution>
+          <phase>initialize</phase>
+            <id>install-npm</id>
+            <goals>
+              <goal>install-node-and-npm</goal>
+            </goals>
+          </execution>
+          <execution>
+            <phase>initialize</phase>
+            <id>npm install</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+          </execution>
+          <execution>
+          <phase>initialize</phase>
+            <id>build</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+            <configuration>
+              <arguments>run-script build</arguments>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <skip>${prodDockerBuild}</skip>
+        </configuration>
+        <executions>
+          <execution>
+            <id>copy-resources</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${basedir}/target/static</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>${webdir}</directory>
+                  <filtering>true</filtering>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>generate-manifest</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <target>
+                <fileset id="webfiles" dir="${basedir}/target/frontend/static" />
+                <property name="prop.webfiles" refid="webfiles" />
+                <echo file="${basedir}/target/frontend/static/manifest.txt">${prop.webfiles}</echo>
+              </target>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
         </plugins>
       </build>
     </profile>
